InternexDev_Sandbox/src/objects/WF_PPR__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name(PPR01)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_code__c</fullName>
        <label>Postal code(PPR11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;PPR&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>WF_PPR</relationshipLabel>
        <relationshipName>WF_PPR</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>WF_PPR</label>
    <nameField>
        <displayFormat>PPR-{00000}</displayFormat>
        <label>WF_PPR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_PPR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>